--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "Twitter-OAuthTool",
-	"addres":"http://twitter-oauthtool.herokuapp.com",
     "version": "0.0.1", 
 	"description": "",
 	"main": "index.js",
@@ -12,8 +11,7 @@
         "body-parser":"*",
 		"request":"*",
 		"oauth":"*",
-		"cookie-session":"*",
-		"pkginfo":"*"
+		"cookie-session":"*"
     },
     "engines": {
     "iojs": "1.0.x"
